--- a/tensorflow/c/experimental/filesystem/plugins/windows/BUILD
+++ b/tensorflow/c/experimental/filesystem/plugins/windows/BUILD
@@ -1,15 +1,23 @@
-# Experimental posix filesystem plugin.
+# Experimental windows filesystem plugin.
+load("//tensorflow:tensorflow.bzl", "tf_cc_shared_object")
 
 package(
     licenses = ["notice"],  # Apache 2.0
 )
 
-# See also note at `../posix/BUILD`
+# Filesystem implementation for Windows environment
+tf_cc_shared_object(
+    name = "windows_filesystem.dll",
+    framework_so = [],
+    linkstatic = False,
+    visibility = ["//visibility:public"],
+    deps = [":windows_filesystem_impl"],
+)
+
+# The real implementation of the filesystem.
 cc_library(
-    name = "windows_filesystem",
-    srcs = [
-        "windows_filesystem.cc",
-    ],
+    name = "windows_filesystem_impl",
+    srcs = ["windows_filesystem.cc"],
     deps = [
         "//tensorflow/c:tf_status",
         "//tensorflow/c/experimental/filesystem:filesystem_interface",
